--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 #RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /intranet/index.php?/$1 [L]
+RewriteRule ^(.*)$ /index.php?/$1 [L]
 </IfModule>
 
 <IfModule !mod_rewrite.c>
